force-app/main/default/objects/CaObjectCount__c/CaObjectCount__c.object-meta.xml
<CustomObject>
    <label>CloudAware Object Count</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudAware Object Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>