force-app/main/default/objects/CaObjectCount__c/fields/caAdDirectory__c.field-meta.xml
<CustomField>
    <fullName>caAdDirectory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Directory</label>
    <referenceTo>CA10AD__CaAdDirectory__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>