force-app/main/default/objects/CaObjectCount__c/fields/caApplication__c.field-meta.xml
<CustomField>
    <fullName>caApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloudAware Application</label>
    <referenceTo>CA10__CaApplication__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>