force-app/main/default/objects/CaObjectCount__c/fields/caAtlasOrganization__c.field-meta.xml
<CustomField>
    <fullName>caAtlasOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atlas Organization</label>
    <referenceTo>CA10AT__CaAtlasOrganization__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>