force-app/main/default/objects/CaObjectCount__c/fields/caAwsAccount__c.field-meta.xml
<CustomField>
    <fullName>caAwsAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS Account</label>
    <referenceTo>CA10__CaAwsAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>