force-app/main/default/objects/CaObjectCount__c/fields/caAzureAccount__c.field-meta.xml
<CustomField>
    <fullName>caAzureAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Azure Subscription</label>
    <referenceTo>CA10__CaAzureAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>