force-app/main/default/objects/CaObjectCount__c/fields/caAzureActiveDirectory__c.field-meta.xml
<CustomField>
    <fullName>caAzureActiveDirectory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Azure Active Directory</label>
    <referenceTo>CA10__CaAzureActiveDirectory__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>