force-app/main/default/objects/CaObjectCount__c/fields/caCrowdstrikeAccount__c.field-meta.xml
<CustomField>
    <fullName>caCrowdstrikeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crowdstrike Account</label>
    <referenceTo>CA10CR__CaCrowdstrikeAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>