force-app/main/default/objects/CaObjectCount__c/fields/caCyberarkServer__c.field-meta.xml
<CustomField>
    <fullName>caCyberarkServer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cyberark Server</label>
    <referenceTo>CA10C__CaCyberarkServer__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>