force-app/main/default/objects/CaObjectCount__c/fields/caGoogleGSuiteCustomer__c.field-meta.xml
<CustomField>
    <fullName>caGoogleGSuiteCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Google G-Suite Customer</label>
    <referenceTo>CA10GS__CaGoogleGSuiteCustomer__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>