force-app/main/default/objects/CaObjectCount__c/fields/caGoogleProject__c.field-meta.xml
<CustomField>
    <fullName>caGoogleProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Google Project</label>
    <referenceTo>CA10__CaGoogleProject__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>