force-app/main/default/objects/CaObjectCount__c/fields/caHerokuAccount__c.field-meta.xml
<CustomField>
    <fullName>caHerokuAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Heroku Account</label>
    <referenceTo>CA10H__CaHerokuAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>