force-app/main/default/objects/CaObjectCount__c/fields/caHerokuTeam__c.field-meta.xml
<CustomField>
    <fullName>caHerokuTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Heroku Team</label>
    <referenceTo>CA10H__CaHerokuTeam__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>