force-app/main/default/objects/CaObjectCount__c/fields/caJamfInstance__c.field-meta.xml
<CustomField>
    <fullName>caJamfInstance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JAMF Instance</label>
    <referenceTo>CA10J__CaJamfInstance__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>