force-app/main/default/objects/CaObjectCount__c/fields/caKubernetesCluster__c.field-meta.xml
<CustomField>
    <fullName>caKubernetesCluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kubernetes Cluster</label>
    <referenceTo>CA10K__CaKubernetesCluster__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>