force-app/main/default/objects/CaObjectCount__c/fields/caNetworkSegment__c.field-meta.xml
<CustomField>
    <fullName>caNetworkSegment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network Segment</label>
    <referenceTo>CA10ND__CaNetworkSegment__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>