force-app/main/default/objects/CaObjectCount__c/fields/caNewRelicAccount__c.field-meta.xml
<CustomField>
    <fullName>caNewRelicAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Relic Account</label>
    <referenceTo>CA10N__CaNewRelicAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>