force-app/main/default/objects/CaObjectCount__c/fields/caPagerDutyAccount__c.field-meta.xml
<CustomField>
    <fullName>caPagerDutyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PagerDuty Account</label>
    <referenceTo>CA10P__CaPagerDutyAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>