force-app/main/default/objects/CaObjectCount__c/fields/caSccmConfigurationManager__c.field-meta.xml
<CustomField>
    <fullName>caSccmConfigurationManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCCM Configuration Manager</label>
    <referenceTo>CA10S__CaSccmConfigurationManager__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>