force-app/main/default/objects/CaObjectCount__c/fields/caSnowflakeAccount__c.field-meta.xml
<CustomField>
    <fullName>caSnowflakeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snowflake Account</label>
    <referenceTo>CA10SN__CaSnowflakeAccount__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>