force-app/main/default/objects/CaObjectCount__c/fields/caVCenterManagementServer__c.field-meta.xml
<CustomField>
    <fullName>caVCenterManagementServer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vCenter Management Server</label>
    <referenceTo>CA10V__CaVCenterManagementServer__c</referenceTo>
    <relationshipName>caObjectCounts</relationshipName>
    <type>Lookup</type>
</CustomField>