force-app/main/default/objects/CaObjectCount__c/fields/dateOfCreation__c.field-meta.xml
<CustomField>
    <fullName>dateOfCreation__c</fullName>
    <label>Date Of Creation</label>
    <type>DateTime</type>
</CustomField>