force-app/main/default/objects/CaObjectCount__c/fields/objectTypeName__c.field-meta.xml
<CustomField>
    <fullName>objectTypeName__c</fullName>
    <label>Object Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>