force-app/main/default/objects/CaObjectCount__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <formula>IF(
CONTAINS( Name, &quot;AWS&quot;), &quot;AWS&quot;,
  IF( 
  CONTAINS( Name, &quot;vCenter&quot;), &quot;vCenter&quot;,
    IF( 
    CONTAINS( Name, &quot;CloudAware&quot;), &quot;Cloudaware&quot;,
      IF(
      CONTAINS( Name, &quot;Azure&quot;), &quot;Azure&quot;,     
null
      )
    )
  )
)</formula>
    <label>Provider</label>
    <type>Text</type>
</CustomField>