force-app/main/default/objects/CaObjectCount__c/fields/recordCount__c.field-meta.xml
<CustomField>
    <fullName>recordCount__c</fullName>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>